--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,6 +13,8 @@ html
     link(rel='stylesheet', href='/bootstrap/css/bootstrap.css')
     script(src='/bootstrap/js/bootstrap.js')
 
+    link(rel='stylesheet', href='/css/ReactToastify.min.css')
+
     link(rel='stylesheet', href='/css/layout.css')
     link(rel='stylesheet', href='/css/appearance.css')
 
