数据浏览页面支持渲染附件，对于其中的图片、声音、视频，给出缩略图/播放器。

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -21,3 +21,10 @@ body {
   padding: 30px 10px 30px 10px;
   margin: 0px auto;
 }
+
+.table.responses img.attachment {
+  height: 100px;
+}
+.table.responses video.attachment {
+  height: 200px;
+}
