--- a/views/responses.pug
+++ b/views/responses.pug
@@ -5,19 +5,26 @@ block content
 
   h1= title
 
-  table.table
+  table.table.responses
     tr
       each item in schema.properties
         th= item.title
     each row in responses
       tr
         each prop, key in schema.properties
-          td= row[key]
+          td
+            if (prop.format === 'data-url' && row[key])
+              - m = row[key].match(/name=([^;]+);/)
+              - name = m ? m[1] : ''
+              if (row[key].startsWith('data:image'))
+                img.attachment(src=row[key])
+              else if (row[key].startsWith('data:audio'))
+                audio.attachment(controls="controls" src=row[key])
+              else if (row[key].startsWith('data:video'))
+                video.attachment(controls="controls" src=row[key])
+              div
+                a(href=row[key] download=name)= '[附件] ' + name
+            else
+              span= row[key]
 
-
-  script.
-    var PAGENAME = "!{'form-' + mode}";
-    var schema = !{schema || '{}'};
-    var uiSchema = !{uiSchema || '{}'};
-  script(src='/js/bundle.js')
 
