--- a/client/src/layout.css
+++ b/client/src/layout.css
@@ -16,6 +16,14 @@ body {
   padding-bottom: 10px;
 }
 
+.form-editor form.rjsf {
+  height: 500px;
+  overflow-y: scroll;
+  padding: 10px;
+  background-color: white;
+  border: 2px solid gray;
+}
+
 .form-view {
   max-width: 600px;
   padding: 30px 10px 30px 10px;
