--- a/client/src/layout.css
+++ b/client/src/layout.css
@@ -16,7 +16,7 @@ body {
   padding-bottom: 10px;
 }
 
-.form-editor form.rjsf {
+.form-preview form.rjsf {
   height: 500px;
   overflow-y: scroll;
   padding: 10px;
