implement GUI form editor.

--- a/client/src/appearance.css
+++ b/client/src/appearance.css
@@ -87,3 +87,13 @@ ul.forms a.view {
   border-bottom: 3px solid #673ab7;
   color: #673ab7;
 }
+
+/****************** FormEditable **********************************/
+.field-header {
+}
+.field-editable.editing {
+  border-left: 4px solid #673ab7;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19), 0 0 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 10px;
+  margin-bottom: 10px;
+}
