fix: EditInPlace component with empty value could not be clicked to edit, because it was zero sized.

--- a/client/src/appearance.css
+++ b/client/src/appearance.css
@@ -109,3 +109,10 @@ ul.forms a.view {
   color: gray;
   margin-right: 10px;
 }
+
+.edit-in-place-label.empty {
+  color: gray;
+}
+.edit-in-place-label.empty:after {
+  content: '<单击此处编辑>';
+}
