--- a/client/src/appearance.css
+++ b/client/src/appearance.css
@@ -121,3 +121,24 @@ ul.forms a.view {
 .edit-in-place-label.empty:after {
   content: '<单击此处编辑>';
 }
+
+/* this style is copied from bootstrap .form-control:focus. */
+.form-control.focus {
+  border-color: #66afe9;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
+}
+
+/* revert .btn-default:hover
+ * 消除自定义输入法上的按钮被点击后的 hover 样式 */
+.my-ime .btn-default:hover {
+  background-color: #fff;
+  border-color: #ccc;
+}
+/* revert .btn-primary:hover
+ * 消除自定义输入法上的按钮被点击后的 hover 样式 */
+.my-ime .btn-primary:hover {
+  background-color: #337ab7;
+  border-color: #2e6da4;
+}
